bugfix: github ribbon wasn't hidden on narrower screens.

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -44,7 +44,7 @@ img {
 }
 
 @media (max-width: 800px) {
-  .ribbon {
+  .github-fork-ribbon-wrapper {
     display: none;
   }
 }
